# onnx_loader

./: CMakeLists.txt  Readme.md
config/: actor.onnx  explore_vae.onnx
include/: CustomKernel.h  MlpLoader.h  OnnxLoader.h  onnx.pb.h
src/: CustomKernel.cpp  MlpLoader.cpp  OnnxLoader.cpp  main.cpp  mat_op.cl  onnx.pb.cc
test/: model_check.cpp
